fixed personal site and updated members page

--- a/members/index.html
+++ b/members/index.html
@@ -121,8 +121,9 @@
                             and <a class="inline" href="https://www.tudelft.nl/en/eemcs">EEMCS</a>,
                             <a class="inline" href="https://www.tudelft.nl/en/">TU Delft</a>, receiving a
                             permanent contract in 2023. The same year, she became part-time faculty at UMass Amherst, ultimately switching
-                            to full-time in 2024.<br>
-                            
+                            to full-time in 2024.
+                        </p>
+                        <p id="bio">
                             Previously, she was a postdoc researcher at TU Delft, where she worked with 
                             <a class="inline" href="https://qutech.nl/person/stephanie-wehner/">Stephanie Wehner</a>.
                             She received her PhD from the University of Massachusetts Amherst, where she worked on systems
