--- a/per/index.html
+++ b/per/index.html
@@ -26,17 +26,17 @@
 		<header class="masthead constrain">
             <div class="masthead__wrapper">
                 <div class="masthead-bar">
-                    <a href="/">
+                    <a href="/per/">
                         <h1 class="masthead-title">Agustin Garcia Flores</h1>
                     </a>
 
                     <div class="masthead-bar__menu">
                         <span class="masthead-bar__menu-item">
-                        <a class="link" href="/talks/">Talks</a>
+                        <a class="link" href="/per/talks/">Talks</a>
                         </span>
 
                         <!-- <span class="masthead-bar__menu-item">
-                        <a class="link" href="/blog/"></a>
+                        <a class="link" href="/per/blog/"></a>
                         </span> -->
                     </div>
                 </div>
