--- a/per/talks/index.html
+++ b/per/talks/index.html
@@ -24,14 +24,14 @@
 
             <div class="masthead__wrapper">
                 <div class="masthead-bar">
-                    <a href="/">
+                    <a href="/per/">
                         <h1 class="masthead-title">Agustin Garcia Flores</h1>
                     </a>
 
                     <div class="masthead-bar__menu">
 
                         <span class="masthead-bar__menu-item">
-                        <a class="link link--active" href="/talks/">Talks</a>
+                        <a class="link link--active" href="/per/talks/">Talks</a>
                         </span>
 
                         <!-- <span class="masthead-bar__menu-item">
