Added Luise's profile

--- a/members/index.html
+++ b/members/index.html
@@ -97,7 +97,8 @@
                             quantum repeaters for quantum communication.
                         </p>
                         <div class="links">
-                            <a href="https://sites.google.com/view/filiprozpedek">Homepage</a> | <a href="https://scholar.google.nl/citations?user=YOaDA-UAAAAJ&hl=en">Google Scholar</a>
+                            <a href="https://sites.google.com/view/filiprozpedek">Homepage</a> |
+                            <a href="https://scholar.google.nl/citations?user=YOaDA-UAAAAJ&hl=en">Google Scholar</a>
                         </div>
                     </div>
                 </div>
@@ -140,7 +141,8 @@
                             at the <a class="inline" href="https://www.uchicago.edu/">University of Chicago</a>.
                         </p>
                         <div class="links">
-                            <a href="https://people.cs.umass.edu/~gvardoyan/#home">Homepage</a> | <a href="https://scholar.google.com/citations?user=iSt_oLcAAAAJ&hl=en">Google Scholar</a>
+                            <a href="https://people.cs.umass.edu/~gvardoyan/#home">Homepage</a> |
+                            <a href="https://scholar.google.com/citations?user=iSt_oLcAAAAJ&hl=en">Google Scholar</a>
                         </div>
                     </div>
                 </div>
@@ -208,7 +210,10 @@
                         <a class="inline" href="https://www.iitism.ac.in/">Indian Institute of Technology Dhanbad</a>.
                     </p>
                     <div class="links">
-                        <a href="https://snehasisaddy.github.io/">Homepage</a> | <a href="https://scholar.google.co.in/citations?user=PX3JAV4AAAAJ&hl=en">Google Scholar</a> | <a href="https://www.linkedin.com/in/snehasisaddy/">LinkedIn</a> | <a href="https://github.com/snehasisaddy">GitHub</a>
+                        <a href="https://snehasisaddy.github.io/">Homepage</a> |
+                        <a href="https://scholar.google.co.in/citations?user=PX3JAV4AAAAJ&hl=en">Google Scholar</a> |
+                        <a href="https://www.linkedin.com/in/snehasisaddy/">LinkedIn</a> |
+                        <a href="https://github.com/snehasisaddy">GitHub</a>
                     </div>
                 </div>
 
@@ -266,19 +271,33 @@
                 </div>
                 
                 <div class="team-member">
-                    <img src="images/pfp.png" alt="Luise Prielinger">
+                    <img src="images/luise-prielinger.jpg" alt="Luise Prielinger">
                     <h3>Luise Prielinger</h3>
-                    <p>Delft University of Technology</p>
+                    <p>
+                        Delft University of Technology<br>
+                        <em>Quantum Internet Division</em>
+                    </p>
                     <p id="bio">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Nulla lacinia posuere consequat.
-                        Integer elementum vel nulla quis vestibulum.
-                        Nulla cursus felis ante, vitae hendrerit nibh vehicula id.
-                        Aenean at accumsan enim.
-                        Suspendisse eu faucibus tellus, sit amet elementum nunc.
+                        Luise completed her master's degrees in computer science and theoretical physics approximately five
+                        years ago, while she was still in Vienna, Austria. Thereafter, she moved to the Netherlands and began
+                        her doctoral studies under Gayane Vardoyan. Luise's study applies existing numerical optimization
+                        approaches to discover effective solutions to complex quantum networking problems. Since quantum
+                        networks are still in the experimental stage, she uses and contributes to the development of
+                        simulation tools for quantum networks and distributed quantum computing. She then employs this
+                        software to analyze and optimize the complex behavior of quantum networks in specific, simulated
+                        environments that interest her. The optimization problems she's attempting to tackle mainly involve
+                        the protocols that regulate such a given quantum network. The goal is to find protocols that allow
+                        the intricate interplay of various devices in a quantum network to run as effectively as feasible.
+                    </p>
+                    <p id="bio">
+                        Summa summarum, Luise is a physicist who enjoys both algorithms and code. She enjoys playing chess,
+                        discussing psychology, practicing yoga, and drinking
+                        <strong style="text-decoration: underline 3px;">good</strong> coffee.
                     </p>
                     <div class="links">
-                        <a href="https://scholar.google.com/citations?user=1iVzpXMAAAAJ&hl=en">Google Scholar</a>
+                        <a href="https://scholar.google.com/citations?user=1iVzpXMAAAAJ&hl=en">Google Scholar</a> |
+                        <a href="https://www.linkedin.com/in/luise-prielinger-958381177/">LinkedIn</a> |
+                        <a href="https://github.com/Luisenden">GitHub</a>
                     </div>
                 </div>
 
