Added Ankit's profile to the members page

--- a/members/index.html
+++ b/members/index.html
@@ -253,20 +253,25 @@
                 </div>
 
                 <div class="team-member">
-                    <img src="images/pfp.png" alt="Ankit Kumar Jha">
+                    <img src="images/ankit-kumar-jha.jpg" alt="Ankit Kumar Jha">
                     <h3>Ankit Kumar Jha</h3>
-                    <p>Manning College of Information and Computer Sciences</p>
+                    <p>
+                        University of Massachusetts Amherst <br>
+                        <em>Manning College of Information and Computer Sciences</em>
+                    </p>
                     <p id="bio">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Nulla lacinia posuere consequat.
-                        Integer elementum vel nulla quis vestibulum.
-                        Nulla cursus felis ante, vitae hendrerit nibh vehicula id.
-                        Aenean at accumsan enim.
-                        Suspendisse eu faucibus tellus, sit amet elementum nunc.
+                        Ankit is a PhD student in the
+                        <a class="inline" href="https://www.cics.umass.edu/">Computer Science Department</a>
+                        at UMass Amherst. He is working under Filip Rozpedek on
+                        Concatenated Bosonic Error Correcting Codes to design
+                        efficient quantum repeaters. Ankit holds a bachelor's and master's
+                        degree in physics from the
+                        <a class="inline" href="https://www.iitkgp.ac.in/">Indian Institute of Technology Kharagpur</a>
+                        along with a minor in mathematics and computing.
                     </p>
                     <div class="links">
-                        <a href="#">Links Here</a>
-                        <!-- <a href="#">Homepage</a> | <a href="#">Google Scholar</a> | <a href="#">LinkedIn</a> | <a href="#">GitHub</a> -->
+                        <a href="https://scholar.google.com/citations?user=Olm22zUAAAAJ&hl=en">Google Scholar</a> |
+                        <a href="https://www.linkedin.com/in/ankit-kumar-jha-7b742a190">LinkedIn</a>
                     </div>
                 </div>
                 
