Added Eric's, Luc's, Meghashrita's, and my own profile to the members page

--- a/members/index.html
+++ b/members/index.html
@@ -170,9 +170,12 @@
                 </div>
 
                 <div class="team-member">
-                    <img src="images/pfp.png" alt="Stav Haldar">
+                    <img src="images/umass.jpg" alt="UMass Logo">
                     <h3>Stav Haldar</h3>
-                    <p>Manning College of Information and Computer Sciences</p>
+                    <p>
+                        University of Massachusetts Amherst <br>
+                        <em>Manning College of Information and Computer Sciences</em>
+                    </p>
                     <p id="bio">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                         Nulla lacinia posuere consequat.
@@ -218,16 +221,18 @@
                 </div>
 
                 <div class="team-member">
-                    <img src="images/pfp.png" alt="Meghashrita Das">
+                    <img src="images/umass.jpg" alt="UMass Logo">
                     <h3>Meghashrita Das</h3>
-                    <p>Manning College of Information and Computer Sciences</p>
+                    <p>
+                        University of Massachusetts Amherst <br>
+                        <em>Manning College of Information and Computer Sciences</em>
+                    </p>
                     <p id="bio">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Nulla lacinia posuere consequat.
-                        Integer elementum vel nulla quis vestibulum.
-                        Nulla cursus felis ante, vitae hendrerit nibh vehicula id.
-                        Aenean at accumsan enim.
-                        Suspendisse eu faucibus tellus, sit amet elementum nunc.
+                        Meghashrita is a
+                        <a class="inline" href="https://www.cics.umass.edu/">computer science</a>
+                        PhD student at UMass Amherst. Her work focuses on quantum
+                        communication and information and involves the design of error-corrected quantum repeaters
+                        with tree clusters and schedulers for quantum network architectures.
                     </p>
                     <div class="links">
                         <a href="https://www.linkedin.com/in/meghashrita-das-b02811190">LinkedIn</a>
@@ -235,20 +240,25 @@
                 </div>
 
                 <div class="team-member">
-                    <img src="images/pfp.png" alt="Agustin Garcia Flores">
+                    <img src="images/umass.jpg" alt="UMass Logo">
                     <h3>Agustin Garcia Flores</h3>
-                    <p>College of Natural Sciences</p>
+                    <p>
+                        University of Massachusetts Amherst <br>
+                        <em>College of Natural Sciences</em>
+                    </p>
                     <p id="bio">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Nulla lacinia posuere consequat.
-                        Integer elementum vel nulla quis vestibulum.
-                        Nulla cursus felis ante, vitae hendrerit nibh vehicula id.
-                        Aenean at accumsan enim.
-                        Suspendisse eu faucibus tellus, sit amet elementum nunc.
+                        Agustin is a PhD student at UMass Amherst's
+                        <a class="inline" href="https://www.umass.edu/physics/">Department of Physics</a>.
+                        He is working on connection protocols in a satellite-based quantum network
+                        under the guidance of Filip Rozpędek and Stav Haldar. Agustin graduated from
+                        <a class="inline" href="https://www.asu.edu/">Arizona State University</a>
+                        with bachelor's degrees in
+                        <a class="inline" href="https://math.asu.edu/">mathematics</a>
+                        and
+                        <a class="inline" href="https://physics.asu.edu/">physics</a>.
                     </p>
                     <div class="links">
-                        <a href="#">Links Here</a>
-                        <!-- <a href="#">Homepage</a> | <a href="#">Google Scholar</a> | <a href="#">LinkedIn</a> | <a href="#">GitHub</a> -->
+                        <a href="https://agarciaflores.github.io/per/">Homepage</a> | <a href="https://github.com/agarciaflores">GitHub</a>
                     </div>
                 </div>
 
@@ -262,7 +272,7 @@
                     <p id="bio">
                         Ankit is a PhD student in the
                         <a class="inline" href="https://www.cics.umass.edu/">Computer Science Department</a>
-                        at UMass Amherst. He is working under Filip Rozpedek on
+                        at UMass Amherst. He is working under Filip Rozpędek on
                         Concatenated Bosonic Error Correcting Codes to design
                         efficient quantum repeaters. Ankit holds a bachelor's and master's
                         degree in physics from the
@@ -313,12 +323,11 @@
                         University of Massachusetts Amherst <br>
                         <em>College of Natural Sciences</em>
                     </p>
-                        <!-- <a class="inline" href=""></a> -->
                     <p id="bio">
                         Ryosuke Shiina is a
                         <a class="inline" href="https://www.umass.edu/physics/about/directory/ryosuke-shiina">PhD candidate</a>
                         through the <a class="inline" href="https://www.umass.edu/physics/">Department of Physics</a>
-                        at UMass Amherst. He has been researching under Filip Rozpedek and has been a graduate student researcher
+                        at UMass Amherst. He has been researching under Filip Rozpędek and has been a graduate student researcher
                         with the <a class="inline" href="https://cqn-erc.arizona.edu/">Center for Quantum Networks</a>.
                         He is a quantum network architect, and his main area of research is theory relating to quantum
                         network schemes, error correction codes such as GKP-code and Cat code, and graph theory.
@@ -326,21 +335,21 @@
                 </div>
                 
                 <div class="team-member">
-                    <img src="images/pfp.png" alt="Eric Yau">
+                    <img src="images/tu-delft.jpg" alt="TU Delft Logo">
                     <h3>Eric Yau</h3>
-                    <p>Delft University of Technology</p>
-                    <p id="bio">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Nulla lacinia posuere consequat.
-                        Integer elementum vel nulla quis vestibulum.
-                        Nulla cursus felis ante, vitae hendrerit nibh vehicula id.
-                        Aenean at accumsan enim.
-                        Suspendisse eu faucibus tellus, sit amet elementum nunc.
+                    <p>
+                        Delft University of Technology<br>
+                        <em>QuTech</em>
                     </p>
-                    <div class="links">
-                        <a href="#">Links Here</a>
-                        <!-- <a href="#">Homepage</a> | <a href="#">Google Scholar</a> | <a href="#">LinkedIn</a> | <a href="#">GitHub</a> -->
-                    </div>
+                    <p id="bio">
+                        Eric completed his master's and bachelor's degrees in mathematics, with a focus on combinatorics
+                        (such as graph theory) and optimization (such as combinatorial optimization). His ongoing research
+                        includes performance analysis and quantum network protocol design, but he hopes to shift his focus
+                        to more graph-theoretic applications on quantum networks in the future.
+                    </p>
+                    <!-- <div class="links">
+                        <a href="#">Homepage</a> | <a href="#">Google Scholar</a> | <a href="#">LinkedIn</a> | <a href="#">GitHub</a>
+                    </div> -->
                 </div>
             </section>
 
@@ -349,19 +358,35 @@
                 <h2>Master Students</h2>
 
                 <div class="team-member">
-                    <img src="images/pfp.png" alt="Snehasis Addy">
+                    <img src="images/umass.jpg" alt="UMass Logo">
                     <h3>Luc Barrett</h3>
-                    <p>Manning College of Information and Computer Sciences</p>
+                    <p>
+                        University of Massachusetts Amherst <br>
+                        <em>Manning College of Information and Computer Sciences</em>
+                    </p>
                     <p id="bio">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Nulla lacinia posuere consequat.
-                        Integer elementum vel nulla quis vestibulum.
-                        Nulla cursus felis ante, vitae hendrerit nibh vehicula id.
-                        Aenean at accumsan enim.
-                        Suspendisse eu faucibus tellus, sit amet elementum nunc.
+                        A recent graduate of UMass Amherst, Luc holds degrees in
+                        <a class="inline" href="https://www.cics.umass.edu/">computer science</a>,
+                        <a class="inline" href="https://www.umass.edu/mathematics-statistics/">applied mathematics</a>,
+                        and
+                        <a class="inline" href="https://www.umass.edu/physics/">physics</a>.
+                        He is now a
+                        <a class="inline" href="https://www.cics.umass.edu/academics/scholarships-and-fellowships/bay-state-scholarship-program">Bay State Fellow</a>
+                        in the UMass MS Computer Science program, where he is working with
+                        Gayane Vardoyan on his master's project. He participated in the
+                        <a class="inline" href="https://moller.jlab.org/">MOLLER</a>
+                        and
+                        <a class="inline" href="https://nexo.llnl.gov/">nEXO</a>
+                        collaborations in
+                        <a class="inline" href="https://websites.umass.edu/pocar/">Andrea Pocar's Lab</a>
+                        and
+                        <a class="inline" href="https://people.umass.edu/kkumar/">Krishna Kumar's Lab</a>
+                        while he was an undergraduate. Additionally, he briefly worked with
+                        <a class="inline" href="https://lab.krastanov.org/">Stefan Krastanov's Lab</a>
+                        to efficiently simulate Gaussian quantum systems.
                     </p>
                     <div class="links">
-                        <a href="https://www.linkedin.com/in/luc-barrett/">LinkedIn</a>
+                        <a href="https://www.lucbarrett.info/">Homepage</a> | <a href="https://www.linkedin.com/in/luc-barrett/">LinkedIn</a>
                     </div>
                 </div>                
             </section>
