Added Meghashrita's and Luc's updated profiles.

--- a/members/index.html
+++ b/members/index.html
@@ -160,11 +160,13 @@
                         <em>Manning College of Information and Computer Sciences</em>
                     </p>
                     <p id="bio">
-                        Leonardo is a post-doc jointly working with
-                        <a class="inline" href="https://acquire.cs.umass.edu/members.html#:~:text=Leonardo%20Bacciottini">Don Towsley</a>
-                        and Gayane Vardoyan. He holds a Ph.D. from the
+                        Leonardo is a post-doc jointly working with Gayane Vardoyan and
+                        <a class="inline" href="https://acquire.cs.umass.edu/members.html#:~:text=Leonardo%20Bacciottini">Don Towsley</a>.
+                        He holds a Ph.D. from the
                         <a class="inline" href="https://www.unipi.it/index.php/english">University of Pisa</a>, where he also obtained his
-                        M.Sc. degree in Computer Engineering. His research interests include protocols and architectures for entanglement
+                        M.Sc. degree in
+                        <a class="inline" href="https://www.unipi.it/index.php/programmes-held-in-english/item/15040-master-of-science-in-computer-engineering">Computer Engineering</a>.
+                        His research interests include protocols and architectures for entanglement
                         distribution networks, simulation, and quantum information theory, with a focus on entanglement purification.
                     </p>
                 </div>
@@ -221,20 +223,34 @@
                 </div>
 
                 <div class="team-member">
-                    <img src="images/umass.jpg" alt="UMass Logo">
+                    <img src="images/meghashrita-das.jpg" alt="Meghashrita Das">
                     <h3>Meghashrita Das</h3>
                     <p>
                         University of Massachusetts Amherst <br>
                         <em>Manning College of Information and Computer Sciences</em>
                     </p>
                     <p id="bio">
-                        Meghashrita is a
-                        <a class="inline" href="https://www.cics.umass.edu/">computer science</a>
-                        PhD student at UMass Amherst. Her work focuses on quantum
-                        communication and information and involves the design of error-corrected quantum repeaters
-                        with tree clusters and schedulers for quantum network architectures.
+                        Meghashrita is a PhD student in
+                        <a class="inline" href="https://www.cics.umass.edu/">CICS</a>
+                        at UMass Amherst. She works with Gayane Vardoyan and Filip Rozpędek to
+                        study the function of loss-tolerant graph states in designing all-photonic
+                        quantum repeaters with error-corrected architectures. Meghashrita holds a
+                        bachelor's degree in
+                        <a class="inline" href="https://www.iitkgp.ac.in/department/AG">agricultural and food engineering</a>
+                        and a master's degree in
+                        <a class="inline" href="https://www.iitkgp.ac.in/financial-engineering">financial engineering</a>
+                        from the
+                        <a class="inline" href="https://www.iitkgp.ac.in/">Indian Institute of Technology Kharagpur</a>.
+                        She also minored in
+                        <a class="inline" href="https://www.iitkgp.ac.in/department/MA">mathematics and computing</a>
+                        and pursued a microspecialization in
+                        <a class="inline" href="https://www.iitkgp.ac.in/department/AI">artificial intelligence and applications</a>.
+                        Her previous research experience includes work on quantum convolutional neural networks,
+                        quantum kernels for image processing, combinatorial problems using VQE and QAOA,
+                        and applications to quantum finance.
                     </p>
                     <div class="links">
+                        <a href="https://scholar.google.com/citations?user=UewgLEwAAAAJ&hl=en">Google Scholar</a> |
                         <a href="https://www.linkedin.com/in/meghashrita-das-b02811190">LinkedIn</a>
                     </div>
                 </div>
@@ -258,7 +274,8 @@
                         <a class="inline" href="https://physics.asu.edu/">physics</a>.
                     </p>
                     <div class="links">
-                        <a href="https://agarciaflores.github.io/per/">Homepage</a> | <a href="https://github.com/agarciaflores">GitHub</a>
+                        <a href="https://agarciaflores.github.io/per/">Homepage</a> |
+                        <a href="https://github.com/agarciaflores">GitHub</a>
                     </div>
                 </div>
 
@@ -271,13 +288,16 @@
                     </p>
                     <p id="bio">
                         Ankit is a PhD student in the
-                        <a class="inline" href="https://www.cics.umass.edu/">Computer Science Department</a>
+                        <a class="inline" href="https://www.cics.umass.edu/">CICS</a>
                         at UMass Amherst. He is working under Filip Rozpędek on
                         Concatenated Bosonic Error Correcting Codes to design
                         efficient quantum repeaters. Ankit holds a bachelor's and master's
-                        degree in physics from the
+                        degree in
+                        <a class="inline" href="https://www.iitkgp.ac.in/department/PH">physics</a>
+                        from the
                         <a class="inline" href="https://www.iitkgp.ac.in/">Indian Institute of Technology Kharagpur</a>
-                        along with a minor in mathematics and computing.
+                        along with a minor in
+                        <a class="inline" href="https://www.iitkgp.ac.in/department/MA">mathematics and computing</a>.
                     </p>
                     <div class="links">
                         <a href="https://scholar.google.com/citations?user=Olm22zUAAAAJ&hl=en">Google Scholar</a> |
@@ -336,7 +356,7 @@
                 
                 <div class="team-member">
                     <img src="images/tu-delft.jpg" alt="TU Delft Logo">
-                    <h3>Eric Yau</h3>
+                    <h3>(Eric) Guo Xian Yau</h3>
                     <p>
                         Delft University of Technology<br>
                         <em>QuTech</em>
@@ -347,9 +367,6 @@
                         includes performance analysis and quantum network protocol design, but he hopes to shift his focus
                         to more graph-theoretic applications on quantum networks in the future.
                     </p>
-                    <!-- <div class="links">
-                        <a href="#">Homepage</a> | <a href="#">Google Scholar</a> | <a href="#">LinkedIn</a> | <a href="#">GitHub</a>
-                    </div> -->
                 </div>
             </section>
 
@@ -358,7 +375,7 @@
                 <h2>Master Students</h2>
 
                 <div class="team-member">
-                    <img src="images/umass.jpg" alt="UMass Logo">
+                    <img src="images/luc-barrett.jpg" alt="Luc Barrett">
                     <h3>Luc Barrett</h3>
                     <p>
                         University of Massachusetts Amherst <br>
@@ -372,21 +389,19 @@
                         <a class="inline" href="https://www.umass.edu/physics/">physics</a>.
                         He is now a
                         <a class="inline" href="https://www.cics.umass.edu/academics/scholarships-and-fellowships/bay-state-scholarship-program">Bay State Fellow</a>
-                        in the UMass MS Computer Science program, where he is working with
-                        Gayane Vardoyan on his master's project. He participated in the
-                        <a class="inline" href="https://moller.jlab.org/">MOLLER</a>
-                        and
+                        in the UMass MS Computer Science program, where he is working with Gayane Vardoyan and
+                        <a class="inline" href="https://lab.krastanov.org/">Stefan Krastanov</a>
+                        on optimizing quantum communication protocols using reinforcement learning. He is
+                        also interested in applications of quantum sensing to neutrino and dark matter experiments.
+                        As an undergraduate, he was affiliated with the
                         <a class="inline" href="https://nexo.llnl.gov/">nEXO</a>
-                        collaborations in
-                        <a class="inline" href="https://websites.umass.edu/pocar/">Andrea Pocar's Lab</a>
                         and
-                        <a class="inline" href="https://people.umass.edu/kkumar/">Krishna Kumar's Lab</a>
-                        while he was an undergraduate. Additionally, he briefly worked with
-                        <a class="inline" href="https://lab.krastanov.org/">Stefan Krastanov's Lab</a>
-                        to efficiently simulate Gaussian quantum systems.
+                        <a class="inline" href="https://moller.jlab.org/">MOLLER</a>
+                        collaborations.
                     </p>
                     <div class="links">
-                        <a href="https://www.lucbarrett.info/">Homepage</a> | <a href="https://www.linkedin.com/in/luc-barrett/">LinkedIn</a>
+                        <a href="https://www.lucbarrett.info/">Homepage</a> |
+                        <a href="https://www.linkedin.com/in/luc-barrett/">LinkedIn</a>
                     </div>
                 </div>                
             </section>
