Added group picture and restructured a bit

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
         <meta name=generator content="Hugo 0.135.0">
         <meta charset=UTF-8>
         <meta name=viewport content="width=device-width,initial-scale=1">
-        <title>Group Name</title>
+        <title>RV Lab</title>
         <link rel=stylesheet href=main.css>
     </head>
     <body>
         <nav aria-label="main navigation" class="header">
-            <a class="brand" href="/">Group Name</a>
+            <a class="brand" href="/">RV Lab</a>
             <div class="menu-icon" onclick=menuIconFunction(this)>
                 <div class="bar1"></div>
                 <div class="bar2"></div>
@@ -21,7 +21,7 @@
                         <a href="/research/">Research</a>
                     </li>
                     <li>
-                        <a href="/members/">Team</a>
+                        <a href="/team/">Team</a>
                     </li>
                 </ul>
                 <div class="hover-pill"></div>
@@ -69,16 +69,12 @@
             <section id=about>
                 <div class="slideshow-container">
                     <div class="slide fade">
-                        <img src="images/group1.jpg" alt="Group picture 1">
-                        <div class="caption">January 2023</div>
+                        <img src="assets/2025-05-19.jpg" alt="Group picture in front of W.E.B. Du Bois Library">
+                        <div class="caption">May 2025</div>
                     </div>
                     <div class="slide fade">
-                        <img src="images/group2.jpg" alt="Group picture 2">
-                        <div class="caption">May 2023</div>
-                    </div>
-                    <div class="slide fade">
-                        <img src="images/group3.jpg" alt="Group picture 3">
-                        <div class="caption">September 2023</div>
+                        <img src="assets/2025-05-19-prime.jpg" alt="Fun group picture in front of W.E.B. Du Bois Library">
+                        <div class="caption">May 2025</div>
                     </div>
                 </div>
                 <div class=text-content>
