--- a/research/index.html
+++ b/research/index.html
@@ -4,12 +4,12 @@
         <meta name=generator content="Hugo 0.135.0">
         <meta charset=UTF-8>
         <meta name=viewport content="width=device-width,initial-scale=1">
-        <title>Research | Group Name</title>
+        <title>Research | RV Lab</title>
         <link rel=stylesheet href=../main.css>
     </head>
     <body>
         <nav aria-label="main navigation" class="header">
-            <a class="brand" href="/">Group Name</a>
+            <a class="brand" href="/">RV Lab</a>
             <div class="menu-icon" onclick=menuIconFunction(this)>
                 <div class="bar1"></div>
                 <div class="bar2"></div>
@@ -21,7 +21,7 @@
                         <a href="/research/">Research</a>
                     </li>
                     <li>
-                        <a href="/members/">Team</a>
+                        <a href="/team/">Team</a>
                     </li>
                 </ul>
                 <div class="hover-pill"></div>
